# typed_csv

./: .gitignore  Cargo.toml  README.md
example/iris/: Cargo.toml  LICENSE
example/iris/src/: iris.rs  iris_latest_for_diff.rs  main.rs
src/: csv_dataset.rs  csv_type.rs  dataset_info.rs  enum_gen.rs  lib.rs  main.rs  sanitizer.rs  struct_gen.rs
