[package]
name = "csv_deserializer"
version = "0.1.3"
edition = "2024"
description = "A rust library to load a csv in a rusty typed way, all values are converted to the most appropriate enum"
readme = "README.md"
repository = "https://github.com/AliothCancer/csv_deserializer"
license = "MIT OR Apache-2.0"
license-file = "LICENSE"
keywords = ["csv", "deserialization", "gen-code", "rs-code"]


[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
csv = "1.4.0"
itertools = "0.14.0"
serde = { version = "1.0.228", features = ["derive"] }

[workspace.dependencies]
csv_deserializer = { path = "../csv_deserializer" }
clap = { version = "4.5.53", features = ["derive"] }
csv = "1.4.0"
itertools = "0.14.0"
#serde = { version = "1.0.228", features = ["derive"] }

[workspace]
resolver = "2"
members = ["example/iris", "../csv_deserializer"]
